--- a/styles/Layout.module.css
+++ b/styles/Layout.module.css
@@ -1,11 +1,36 @@
+.myButton {
+	box-shadow: 0px 1px 0px 0px #f0f7fa;
+	background:linear-gradient(to bottom, #0070f3 5%, #0070f3 100%);
+	background-color:#0070f3;
+	border-radius:6px;
+	border:1px solid #0070f3;
+	display:inline-block;
+	cursor:pointer;
+	color:#ffffff;
+	font-family:Arial;
+	font-size:15px;
+	font-weight:bold;
+	padding:6px 76px;
+	text-decoration:none;
+	text-shadow:0px -1px 0px #5b6178;
+}
+.myButton:hover {
+	background:linear-gradient(to bottom, #0070f3 5%, #0070f3 100%);
+	background-color:#0070f3;
+}
+.myButton:active {
+	position:relative;
+	top:1px;
+}
+
 .container {
-  min-height: 100vh;
+  min-height: 50vh;
   padding: 0 0.5rem;
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: flex-start;
   align-items: center;
-  height: 100vh;
+  height: 50vh;
 }
 
 .main {
@@ -13,8 +38,9 @@
   flex: 1;
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: flex-start;
   align-items: center;
+  font-size: 1.25rem;
 }
 
 .footer {
